--- a/src/public/css/loginRegister.css
+++ b/src/public/css/loginRegister.css
@@ -142,6 +142,7 @@
   margin-top: 14px; }
 
 .btn-register {
+  display: inline-block;
   width: 100%;
   background-color: #6780ff;
   height: 36px;
@@ -151,12 +152,12 @@
   justify-content: center;
   align-items: center; }
 
-.btn-register__container p {
+.btn-register__container .no-accout {
   margin-top: 12px;
   text-align: center;
   font-size: 1.4rem; }
 
-.btn-register__container p span {
+.btn-register__container .no-accout span {
   display: inline-block;
   cursor: pointer;
   color: #6780ff; }
