--- a/src/resources/views/admin/managerPost.hbs
+++ b/src/resources/views/admin/managerPost.hbs
@@ -1,4 +1,4 @@
-<div class="form__user-common">
+<div class="form__user-common pb-30">
     <div class="form-user">
         <h1>Danh sách bài viết</h1>
         <div class="form__CRUD">
