--- a/src/resources/views/partials/headerBlogs.hbs
+++ b/src/resources/views/partials/headerBlogs.hbs
@@ -126,7 +126,7 @@
         />
         <span class="header-tablet-mobile__name">Quốc Huy</span>
         <img
-        src="/img/logo.png"
+        src="/img/logo1.png"
         alt=""
         class="header__logo-tablet-mobile"
         />
