--- a/src/resources/views/user/home.hbs
+++ b/src/resources/views/user/home.hbs
@@ -79,27 +79,35 @@
         </div>
         <ul class="content__block-list-2">
             <div class="grid wide">
-                <h1 class="content__block-item-2">The Wild Wild West</h1>
+                <h1 class="content__block-item-2">Tin tức nổi bật</h1>
                 <div class="row">
                 <div class="col l-4 m-6 c-12">
-                    <li class="">
-                    <div
-                        class="img" style="
-                        background-image: url('https://media.hswstatic.com/eyJidWNrZXQiOiJjb250ZW50Lmhzd3N0YXRpYy5jb20iLCJrZXkiOiJnaWZcL0Jhc3MtUmVldmVzLTIuanBnIiwiZWRpdHMiOnsicmVzaXplIjp7IndpZHRoIjo2MDAsImhlaWdodCI6MzM3fX19');
-                        "
-                    >
-                        <span>
-                        Bass Reeves: Baddest Marshal in the Old West, Original
-                        'Lone Ranger'
-                        </span>
-                    </div>
+                    <li>
+                        <div
+                            class="img" style="
+                            background-image: url('https://media.hswstatic.com/eyJidWNrZXQiOiJjb250ZW50Lmhzd3N0YXRpYy5jb20iLCJrZXkiOiJnaWZcL0Jhc3MtUmVldmVzLTIuanBnIiwiZWRpdHMiOnsicmVzaXplIjp7IndpZHRoIjo2MDAsImhlaWdodCI6MzM3fX19');
+                            "
+                        >
+                            <span>
+                            Bass Reeves: Baddest Marshal in the Old West, Original
+                            'Lone Ranger'
+                            </span>
+                        </div>
                     </li>
                 </div>
+                
 
                 <!-- end row -->
                 </div>
                 <!-- end grid -->
             </div>
+
+            <li>
+                <div class="ocean">
+                    <div class="wave"></div>
+                    <div class="wave"></div>
+                </div>
+            </li>
         </ul>
 
         <div class="content__product">
