--- a/src/public/css/base.css
+++ b/src/public/css/base.css
@@ -95,7 +95,7 @@ html {
   right: 0;
   height: auto;
   width: 230px;
-  background-color: #fff;
+  background-color: var(--white-color);
   box-shadow: 0 -4px 32px rgba(0, 0, 0, 0.3);
   padding: 8px 0;
   border-radius: 10px;
