--- a/src/public/css/homeAdmin.css
+++ b/src/public/css/homeAdmin.css
@@ -5,7 +5,8 @@
 .chart {
   width: 100%;
   height: 400px;
-  background-color: var(--white-color); }
+  background-color: var(--white-color);
+  position: relative; }
 
 .statistical {
   width: 100%;
@@ -124,3 +125,8 @@
   100% {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg); } }
+
+#myChart {
+  position: absolute;
+  width: 100%;
+  height: 100%; }
