--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -39,6 +39,7 @@
   height: auto;
   overflow: hidden;
   position: relative;
+  margin-top: 60px;
 }
 
 .slides {
@@ -180,7 +181,7 @@ input[name="r"] {
 .content__block-item {
   width: 100%;
   height: auto;
-  background-color: #fff;
+  background-color: var(--white-color);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
   border-radius: 4px;
   cursor: pointer;
@@ -216,11 +217,12 @@ input[name="r"] {
   background-color: rgb(25, 91, 127);
   list-style: none;
   padding: 32px 0 48px;
+  position: relative;
 }
 
 .content__block-item-2 {
   text-align: center;
-  color: #fff;
+  color: var(--white-color);
   font-size: 3.2rem;
   margin: 0 0 28px;
   font-weight: 700;
@@ -231,13 +233,15 @@ input[name="r"] {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  z-index: 2;
 }
 
 /* fix bug */
 
 .content__block-list-2 span {
-  color: #fff;
+  color: var(--white-color);
   position: absolute;
+  z-index: 2;
   bottom: 0;
   left: 0;
   right: 0;
@@ -249,6 +253,56 @@ input[name="r"] {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
+}
+
+// wave animation
+
+.ocean {
+  height: 5%;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: #015871;
+}
+
+.wave {
+  background: url(https://cdn.kcak11.com/codepen_assets/wave_animation/wave.svg)
+    repeat-x;
+  position: absolute;
+  top: -198px;
+  width: 6400px;
+  height: 198px;
+  animation: wave 7s cubic-bezier(0.36, 0.45, 0.63, 0.53) infinite;
+  transform: translate3d(0, 0, 0);
+}
+
+.wave:nth-of-type(2) {
+  top: -175px;
+  animation: wave 7s cubic-bezier(0.36, 0.45, 0.63, 0.53) -0.125s infinite,
+    swell 7s ease -1.25s infinite;
+  opacity: 1;
+}
+
+@keyframes wave {
+  0% {
+    margin-left: 0;
+  }
+  100% {
+    margin-left: -1600px;
+  }
+}
+@keyframes swell {
+  0%,
+  100% {
+    transform: translate3d(0, -25px, 0);
+  }
+  50% {
+    transform: translate3d(0, 5px, 0);
+  }
+}
+.endWave {
+  display: none;
 }
 
 /* share knowledge */
