--- a/src/resources/scss/header.scss
+++ b/src/resources/scss/header.scss
@@ -1,8 +1,8 @@
 .header {
   height: var(--navbar-height);
-  background-color: transparent;
+  background-color: rgb(21, 150, 147);
   position: fixed;
-  top: 20px;
+  top: 0;
   width: 100%;
   transition: all linear 0.3s;
   z-index: 9;
@@ -40,7 +40,6 @@
 .header-login-register {
   font-size: 1.4rem;
   font-weight: 600;
-  flex-basis: 20%;
 }
 .header-list__item-link {
   text-decoration: none;
@@ -55,8 +54,15 @@
 }
 
 .header-list__item-link:hover {
-  background-color: var(--white-color);
+  background-color: rgb(229, 229, 229);
   color: var(--primary-color);
+  border-radius: 8px;
+}
+
+.header-list__item-link.active {
+  background-color: rgb(229, 229, 229);
+  color: var(--primary-color);
+  border-radius: 8px;
 }
 
 .header-login-register {
@@ -76,6 +82,7 @@
 .header-login-register a:hover {
   background-color: var(--white-color);
   color: var(--primary-color);
+  border-radius: 8px;
 }
 
 /*header on tablet mobile */
@@ -112,6 +119,7 @@
   padding: 0 12px;
   cursor: pointer;
   -webkit-tap-highlight-color: transparent;
+  // bottom: 2px;
 }
 
 .header-icon__bar {
@@ -614,7 +622,7 @@
   left: 0;
   right: 0;
   top: calc(100% + 22px);
-  border: 1px solid var(--text-color);
+  border: 1px solid var(--white-color);
 }
 
 .header-tablet-mobile__img {
@@ -636,7 +644,7 @@
 }
 
 .header__logo-tablet-mobile {
-  height: 90px;
+  height: 200px;
 }
 
 .nav-bar-tablet-mobile {
@@ -646,7 +654,7 @@
   right: 0;
   bottom: 0;
   width: 320px;
-  background-color: var(--primary-color);
+  background-color: rgb(21, 150, 147);
   box-shadow: 1px 1px 16px rgba(0, 0, 0, 0.8);
   transform: translateX(100%);
   opacity: 0;
@@ -659,8 +667,15 @@
   opacity: 1;
 }
 
-.header-tablet-mobile-list {
+.mt-104 {
   margin-top: 104px;
+}
+
+.form-tablet-mobile-login-register {
+  margin-top: 104px;
+}
+.header-tablet-mobile-list {
+  // margin-top: 104px;
   list-style-type: none;
 }
 
@@ -691,6 +706,7 @@
   align-items: center;
   font-weight: 600;
   cursor: pointer;
+  text-decoration: none;
 }
 
 .header-tablet-mobile__icon-register,
