--- a/src/resources/scss/homeAdmin.scss
+++ b/src/resources/scss/homeAdmin.scss
@@ -7,6 +7,7 @@
   width: 100%;
   height: 400px;
   background-color: var(--white-color);
+  position: relative;
 }
 
 .statistical {
@@ -150,4 +151,10 @@
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
   }
+}
+
+#myChart {
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
