--- a/src/resources/scss/userManager.scss
+++ b/src/resources/scss/userManager.scss
@@ -3,6 +3,10 @@
 .form__user-common {
   margin: 30px 0 0 261px;
   padding: 0 12px;
+  // padding-bottom: 30px;
+}
+
+.pb-30 {
   padding-bottom: 30px;
 }
 
@@ -109,6 +113,18 @@
   border: none;
   border: 1px solid rgb(206, 212, 218);
   border-radius: 4px;
+}
+
+.btn-view {
+  background-color: rgb(28, 200, 138);
+  position: relative;
+  min-width: 100px;
+  cursor: pointer;
+  border: none;
+  border: 1px solid rgb(28, 200, 138);
+  border-radius: 4px;
+  text-decoration: none;
+  display: inline-block;
 }
 
 .btn-update {
@@ -314,18 +330,49 @@ tbody tr {
   border-bottom: 1px solid rgba(0, 0, 0, 0.4);
 }
 
-.btn-delete-viewPosts,
-.btn-update-viewPosts {
-  min-width: 100px;
-  font-size: 1.6rem;
-  text-decoration: none;
-  border-radius: 8px;
-}
+// .btn-delete-viewPosts,
+// .btn-update-viewPosts {
+//   min-width: 100px;
+//   font-size: 1.6rem;
+//   text-decoration: none;
+//   border-radius: 8px;
+// }
 
-.btn-delete-viewPosts {
-  background-color: #ed2f2f;
-}
+// .btn-delete-viewPosts {
+//   background-color: #ed2f2f;
+// }
 
 .btn-update-viewPosts {
   background-color: #2789ea;
+}
+
+// sort
+.sort-down,
+.sort-up,
+.default {
+  color: blue;
+}
+
+// info user
+
+.form-user__heading h1 {
+  line-height: 50px;
+  padding: 0 12px;
+  color: rgb(78, 115, 223);
+  font-size: 2.4rem;
+}
+
+.info__user {
+  font-size: 3.2rem;
+  color: rgb(133, 135, 150);
+  margin: 8px 0;
+}
+
+.info__user div p {
+  min-width: 400px;
+}
+
+.info__user div span {
+  display: inline-block;
+  margin-right: 8px;
 }
