--- a/src/resources/views/admin/handleUser.hbs
+++ b/src/resources/views/admin/handleUser.hbs
@@ -1,5 +1,5 @@
 <div class="content">
-    <div class="form__user-common">
+    <div class="form__user-common pb-30">
         <div class="form-user">
             <div class="view-post">
                 <h1 class="heading">Tạo bài viết</h1>
