--- a/src/resources/views/admin/homeAdmin.hbs
+++ b/src/resources/views/admin/homeAdmin.hbs
@@ -48,27 +48,12 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" style="margin-top: 20px;">
                 <div class="col l-8 m-12 c-12">
                     <div class="row">
-                        <div class="col l-6 m-12 c-12">
+                        <div class="col l-12 m-12 c-12">
                             <div class="chart">
-                                1
-                            </div>
-                        </div>
-                        <div class="col l-6 m-12 c-12">
-                            <div class="chart">
-                                2
-                            </div>
-                        </div>
-                        <div class="col l-6 m-12 c-12">
-                            <div class="chart">
-                                3
-                            </div>
-                        </div>
-                        <div class="col l-6 m-12 c-12">
-                            <div class="chart">
-                                4
+                                <canvas id="myChart"></canvas>
                             </div>
                         </div>
                     </div>
