--- a/src/resources/views/admin/viewPosts.hbs
+++ b/src/resources/views/admin/viewPosts.hbs
@@ -10,20 +10,15 @@
             <table>
                 <thead>
                     <tr>
-                        <th>
+                        <th style="width: 10%;">
                             #
                         </th>
-                        <th style="width: 15%;">Ảnh</th>
+                        <th style="width: 10%;">Ảnh</th>
                         <th style="width: 40%;">
                             Tên laptop
                             {{{sortable 'name' _sort}}}
                         </th>
-                        <th style="width: 14%;">
-                            Miêu tả
-                            {{{sortable 'description' _sort}}}
-
-                        </th>
-                        <th style="width: 20%;">chức năng</th>
+                        <th style="width: 15%;">chức năng</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -34,15 +29,18 @@
                         </th>
                         <th><img src="{{this.image}}"style="width: 50px; height: 50px; border-radius:12px;"></th>
                         <th>{{this.name}}</th>
-                        <th><a href="/homeAdmin/{{this.slug}}">Xem chi tiết</a></th>
                         <th>
-                            <div style="display: grid; grid-template-columns: 1fr 1fr;padding: 0 12px; grid-column-gap: 12px; grid-row-gap: 8px;">
-                                <a href="/homeAdmin/{{this._id}}/edit" class="btn btn-update-viewPosts">
+                            <div style="display: grid; grid-template-columns: 1fr 1fr 1fr;padding: 0 12px; grid-column-gap: 12px; grid-row-gap: 8px; align-items: center">
+                               <a href="/homeAdmin/{{this.slug}}" class="btn btn-view">
+                                    <i class="fas fa-eye"></i>
+                                    <span>xem</span>
+                                </a>
+                                <a href="/homeAdmin/{{this._id}}/edit" class="btn btn-update">
                                     <i class="fas fa-edit"></i>
                                     <span>sửa</span>
                                 </a>
-                                <form action="/homeAdmin/{{this._id}}?_method=DELETE" method="post">
-                                    <button class="btn btn-delete-viewPosts">
+                                <form action="/homeAdmin/{{this._id}}?_method=DELETE" method="post" class="btn btn-delete" style="position: relative; top: 0">
+                                    <button style="background-color: transparent; border: none;font-size: 1.8rem;font-weight: 600;color: var(--white-color);">
                                         <i class="far fa-trash-alt"></i>
                                         <span>Xóa</span>
                                     </button>
